--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,14 +7,58 @@
 {% if session.get('nurse') %}
 <div class="section">
     <div class="lined-heading"><span>Dekurzy</span></div>
-    <div class="scroll">
 
+    <div class="scroll-wrapper">
+        <button class="scroll-arrow left" onclick="scrollDekurzy(-1)">
+            <i class="bi bi-chevron-left"></i>
+        </button>
+
+        <div class="scroll" id="monthScroll">
+            {% for month_dekurz in months_dekurz %}
+            <a href="#" class="small-token">
+                {{ month_dekurz.mesiac }}/{{ month_dekurz.rok }}
+            </a>
+            {% endfor %}
+
+            {% for month_dekurz in months_dekurz %}
+            <a href="#" class="small-token">
+                {{ month_dekurz.mesiac }}/{{ month_dekurz.rok }}
+            </a>
+            {% endfor %}
+
+            {% for month_dekurz in months_dekurz %}
+            <a href="#" class="small-token">
+                {{ month_dekurz.mesiac }}/{{ month_dekurz.rok }}
+            </a>
+            {% endfor %}
+
+            {% for month_dekurz in months_dekurz %}
+            <a href="#" class="small-token">
+                {{ month_dekurz.mesiac }}/{{ month_dekurz.rok }}
+            </a>
+            {% endfor %}
+            {% for month_dekurz in months_dekurz %}
+            <a href="#" class="small-token">
+                {{ month_dekurz.mesiac }}/{{ month_dekurz.rok }}
+            </a>
+            {% endfor %}
+            {% for month_dekurz in months_dekurz %}
+            <a href="#" class="small-token">
+                {{ month_dekurz.mesiac }}/{{ month_dekurz.rok }}
+            </a>
+            {% endfor %}
+        </div>
+
+        <button class="scroll-arrow right" onclick="scrollDekurzy(1)">
+            <i class="bi bi-chevron-right"></i>
+        </button>
     </div>
 
-    <a class="text-button" href="{{ url_for('patient.list_patients') }}">
+    <a class="text-button" href="{{ url_for('month.create_month') }}">
         vypísať nový mesiac <i class="bi bi-arrow-right"></i>
     </a>
 </div>
+
 
 <div class="section">
     <div class="lined-heading"><span>Doprava</span></div>
@@ -35,4 +79,8 @@
 {% else %}
 <p>Nie je prihlásený žiadny používateľ.</p>
 {% endif %}
+{% endblock %}
+
+{% block scripts %}
+<script src="{{ url_for('static', filename='js/dashboard.js') }}"></script>
 {% endblock %}
