--- a/templates/create/month.html
+++ b/templates/create/month.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}ADOS - prihlásenie{% endblock %}
+{% block title %}ADOS{% endblock %}
 
 {% block content %}
 
