--- a/static/css/global.css
+++ b/static/css/global.css
@@ -231,6 +231,22 @@ textarea {
     cursor: default;
 }
 
+.small-small-token {
+    padding: 8px;
+    background: #5C9EAD;
+    border-radius: 20px;
+    cursor: pointer;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    border: none;
+    min-width: max-content;
+    text-decoration: none;
+    font-size: 16px;
+}
+
 .small-token {
     padding: 8px;
     background: #5C9EAD;
@@ -245,6 +261,8 @@ textarea {
     min-width: max-content;
     text-decoration: none;
     font-size: 16px;
+    width: 600px;
+    margin-bottom: 10px;
 }
 
 .active-patient {
@@ -429,28 +447,12 @@ textarea {
 
 .bottom-section {
     position: fixed;
-    width: 80%;
-    bottom: 20px;
+    width: 100%;
+    bottom: 0px;
     background-color: #fff;
     border-radius: 30px;
     z-index: 1000;
-}
-
-
-.table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.table td {
-    padding: 6px 10px;
-    border-bottom: 1px solid #ccc;
-    color: #5C9EAD;
-}
-
-accent {
-    text-transform: uppercase;
-    font-weight: 100px;
-    font-size: 1rem;
-    color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
