--- a/static/css/global.css
+++ b/static/css/global.css
@@ -446,13 +446,14 @@ textarea {
 }
 
 .bottom-section {
+    border-top: solid 1px #ccc;
     position: fixed;
     width: 100%;
     bottom: 0px;
     background-color: #fff;
-    border-radius: 30px;
     z-index: 1000;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
