--- a/templates/dekurzy/menu.html
+++ b/templates/dekurzy/menu.html
@@ -119,6 +119,10 @@
         <button id="generate_schedule" class="btn" type="submit" style="width: 600px; margin-bottom: 20px;">Uložiť</button>
     </div>
 
+    <div id="loader" class="loader-overlay">
+        <div class="spinner"></div>
+    </div>
+
     {% else %}
     <p>Nie je prihlásený žiadny používateľ.</p>
     {% endif %}
@@ -133,5 +137,5 @@
 {% block scripts %}
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/sk.js"></script>
-<script src="{{ url_for('static', filename='js/menu.js') }}"></script>
+<script src="{{ url_for('static', filename='js/dekurzy/menu.js') }}"></script>
 {% endblock %}
