--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,6 +36,27 @@
 
 <div class="section">
     <div class="lined-heading"><span>Doprava</span></div>
+
+    <div class="scroll-wrapper">
+        <button class="scroll-arrow left" onclick="scrollDekurzy(-1)">
+            <i class="bi bi-chevron-left"></i>
+        </button>
+    
+        <div class="scroll" id="monthScroll">
+            {% for month_dekurz in months_dekurz %}
+            <a href="#" class="small-small-token month-select" data-id="{{ month_dekurz.id }}"
+                data-mesiac="{{ month_dekurz.mesiac }}" data-rok="{{ month_dekurz.rok }}"
+                data-prvy-den="{{ month_dekurz.prvy_den }}" data-vysetrenie="{{ month_dekurz.vysetrenie_start }}"
+                data-vypisanie="{{ month_dekurz.vypis_start }}" data-posledny-den="{{ month_dekurz.posledny_den }}">
+                {{ "%02d" | format(month_dekurz.mesiac) }}/{{ month_dekurz.rok }}
+            </a>
+            {% endfor %}
+        </div>
+    
+        <button class="scroll-arrow right" onclick="scrollDekurzy(1)">
+            <i class="bi bi-chevron-right"></i>
+        </button>
+    </div>
 </div>
 
 <div class="section">
