first version done, ready for revision

--- a/templates/transport/transport_menu.html
+++ b/templates/transport/transport_menu.html
@@ -39,6 +39,10 @@
             </div>
     </div>
 
+    <div id="loader" class="loader-overlay">
+        <div class="spinner"></div>
+    </div>
+
     {% else %}
     <p>Nie je prihlásený žiadny používateľ.</p>
     {% endif %}
