--- a/templates/transport/transport.html
+++ b/templates/transport/transport.html
@@ -18,6 +18,16 @@
 
     <div class="section">
         <div class="lined-heading"><span>Poisťovňa</span></div>
+
+        <div class="scroll" id="monthScroll">
+            <a href="#" class="small-small-token">
+                {{ poistovna.kilometre }}  KM
+            </a>
+
+            <a href="#" class="small-small-token">
+                {{ poistovna.cena }}  EUR
+            </a>
+        </div>
     
         <div class="table-container">
             <table>
@@ -35,12 +45,14 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td id="identifikator-pzs">{{ sestra.identifikator_pzs }}</td>
-                        <td id="kod-pzs">{{ sestra.kod_pzs }}</td>
-                        <td id="kod-zp">{{ sestra.kod_zp }}</td>
-                        <td id="uvazok-zp">{{ sestra.uvazok }}</td>
-                        <td id="obdobie">{{ sestra.obdobie }}</td>
-                        <td id="mena">{{ sestra.mena }}</td>
+                        <td>{{poistovna.typ_davky}}</td>
+                        <td>{{poistovna.ico_odosielatela}}</td>
+                        <td>{{poistovna.datum_odoslania}}</td>
+                        <td>{{poistovna.cislo_davky}}</td>
+                        <td>{{poistovna.pocet_dokladov}}</td>
+                        <td>{{poistovna.pocet_medii}}</td>
+                        <td>{{poistovna.cislo_media}}</td>
+                        <td>{{poistovna.pobocka}}</td>
                     </tr>
                 </tbody>
             </table>
@@ -76,7 +88,7 @@
         </div>
     </div>
 
-    <div class="section" style="margin-bottom: 120px;">
+    <div class="section" style="margin-bottom: 200px;">
         <div class="lined-heading"><span>Dáta</span></div>
 
         <div class="table-container">
@@ -138,6 +150,28 @@
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
+    </div>
+
+    <div class="bottom-section">
+        <div class="half-form-group" style="width: 600px;">
+            <div class="form-group">
+                <label for="invoice_number">Číslo faktúry</label>
+                <input type="text" id="invoice_number" name="invoice_number" required>
+            </div>
+
+            <div class="form-group">
+                <label for="character">Charakter dávky</label>
+                <select name="character" id="character">
+                    <option value="N">Nová dávka</option>
+                    <option value="O">Opravná dávka</option>
+                    <option value="A">Aditívna dávka</option>
+                </select>
+            </div>
+        </div>
+        
+        <div style="width: 600px;">
+            <button type="button" class="btn" id="save-btn">Vytvoriť dátové rozhranie pre dopravu</button>
         </div>
     </div>
 
